Elaboración del 'controller' 2 y corrección del 'service'